--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                     <li class="nav__item"><a href="#" class="nav__link">Come work with us!</a></li>
             </ul>
             <p class="copyright">
-                &copy; Copyright 2019 Vikrant Gupta. Special thanks to Jonas for his thoughtful guidance and teachings.
+                &copy; Made By Vikrant Gupta. Special thanks to Jonas for his thoughtful guidance and teachings.
             </p>
         </footer>
     </body>
